# XPlaneCommunicator

./: .gitmodules  README.md
.github/workflows/: cpp-cmake-build-test.yml  python-deps-test.yml
configs/: config_.yaml
cpp/: CMakeLists.txt  demo.cpp
cpp/cmake/: common.cmake
cpp/include/: class_abstract_base.h  class_implemented_derived.h  i_interface_name.h
cpp/src/: CMakeLists.txt  class_abstract_base.cpp  class_implemented_derived.cpp
cpp/test/: CMakeLists.txt  test_class_implemented_derived.cpp  test_main.cpp
libs/: CMakeLists.txt
libs/another_module/cpp/src/: CMakeLists.txt
python/: demo.py  test_rest_api.py  test_websockets.py
python/modules/: class_abstract_base.py  class_implemented_derived.py  i_interface_name.py  xplane_communicator.py
python/tests/: test_class_implemented_derived.py
test-libs/another_module/cpp/src/: CMakeLists.txt
